# ockam

.github/workflows/: all.yml  documentation.yml  elixir.yml  rust.yml
implementations/rust/ockam/ockam_entity/: Cargo.toml
implementations/rust/ockam/ockam_entity/src/: channel.rs
implementations/rust/ockam/ockam_transport_ble/: Cargo.toml  README.md
implementations/rust/ockam/ockam_transport_ble/examples/: 05-secure-channel-over-ble-transport-initiator.rs
implementations/rust/ockam/ockam_transport_ble/src/: lib.rs  macros.rs  transport.rs
implementations/rust/ockam/ockam_transport_ble/src/driver/: mod.rs  mutex.rs
implementations/rust/ockam/ockam_transport_ble/src/driver/bluetooth_hci/: ble_uart.rs  mod.rs
implementations/rust/ockam/ockam_transport_ble/src/driver/btleplug/: mod.rs
implementations/rust/ockam/ockam_transport_ble/src/workers/: listener.rs  receiver.rs  sender.rs
